@startuml builder-without-director
/'
 * @file builder-without-director.puml
 * @brief Builder Pattern - Yönlendirici olmadan basit yaklaşım
 * @author Muhammed Kayra Bulut
 * @date 15.10.2025
 * @version 1.0
 * 
 * @description Bu diyagram Builder pattern'in Yönlendirici sınıfı olmadan
 *              nasıl kullanılabileceğini gösterir. Builder'ın kendisi
 *              oluşturma sürecini yönetir.
 '/

title Builder Pattern - Yönlendirici Olmadan (Basit Yaklaşım)

skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam shadowing false

skinparam class {
    BackgroundColor #E8F4F8
    BorderColor #2C5F7C
    ArrowColor #2C5F7C
}

' Product sınıfı
class Computer {
    +CPU: string
    +RAM: string
    +storage: string
    +GPU: string
    __
    +show(): void
}

' Abstract Builder
abstract class ComputerBuilder {
    #computer: unique_ptr<Computer>
    __
    +ComputerBuilder()
    +{abstract} buildCPU(): void
    +{abstract} buildRAM(): void
    +{abstract} buildStorage(): void
    +{abstract} buildGPU(): void
    +build(): unique_ptr<Computer>
}

' Concrete Builders
class GamingComputerBuilder {
    +buildCPU(): void
    +buildRAM(): void
    +buildStorage(): void
    +buildGPU(): void
}

class OfficeComputerBuilder {
    +buildCPU(): void
    +buildRAM(): void
    +buildStorage(): void
    +buildGPU(): void
}

' İlişkiler
ComputerBuilder ..> Computer : <<creates>>
ComputerBuilder <|-- GamingComputerBuilder
ComputerBuilder <|-- OfficeComputerBuilder

note right of ComputerBuilder
  **build() metodu construction'ı yönetir:**
  1. buildCPU()
  2. buildRAM()
  3. buildStorage()
  4. buildGPU()
  5. return computer
  
  **Director'a gerek yok!**
end note

note bottom of GamingComputerBuilder
  **Örnek Kullanım:**
  GamingComputerBuilder builder;
  auto pc = builder.build();
  pc->show();
end note

note "**Faydaları:**\n• Daha basit kod\n• Daha az sınıf\n• Client için kolay kullanım\n• Çağdaş C++ yaklaşımı" as N1

footer Oluşturulma: 15.10.2025 | Sürüm: 1.0.1 | Pattern: Builder (Basitleştirilmiş)

@enduml

